--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-node": "^1.0.0-next.106",
-		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/adapter-node": "next",
+		"@sveltejs/kit": "next",
 		"@types/bcrypt": "^5.0.2",
 		"@types/jsonwebtoken": "^9.0.5",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -31,7 +30,7 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"prisma": "^5.7.1",
 		"sass": "^1.71.1",
-		"svelte": "^4.0.5",
+		"svelte": "^4.2.18",
 		"svelte-carousel": "^1.0.25",
 		"svelte-check": "^3.4.3",
 		"svelte-headless-table": "^0.18.1",
